# typst-docs

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  Makefile  README.md  [relativeRoute].md  [relativeRoute].paths.ts  [route].paths.ts  build.rs  config.toml  index.html  index.md  main2.ts  package-lock.json  package.json  run.js  scripts.rs  scripts.ts  typst-docs.ts
.github/workflows/: deploy-pages.yml
.vitepress/: config.ts
.vitepress/config/: es.ts  fr.ts  index.ts  root.ts  zh.ts
.vitepress/theme/components/: Category.vue  Func.vue  Group.vue  Html.vue  Packages.vue  Symbols.vue  Type.vue
_layouts/: _footer.ejs  _header.ejs  base.ejs  category.ejs  func.ejs  group.ejs  html.ejs  packages.ejs  symbols.ejs  type.ejs
build-typst-docs/: Cargo.toml
build-typst-docs/src/: main.rs
build-typst-docs/templates/: func.html  html.html
content/: _index.es.md  _index.md  _index.zh.md
crates/build-typst-docs/: Cargo.toml  README.md
crates/build-typst-docs-runner/: Cargo.toml
crates/build-typst-docs-runner/src/: main.rs
crates/build-typst-docs-worker/: Cargo.toml
crates/build-typst-docs/src/: main.rs
crates/build-typst-docs/src/typst_docs_serde_helpers/: html.rs  macros.rs  mod.rs  static_str.rs
crates/rewrite-base-url/: Cargo.toml
crates/rewrite-base-url/src/: main.rs
crates/typst-docs-serde/: Cargo.toml
crates/typst-docs-serde/src/: html.rs  lib.rs  static_str.rs  static_str_serde.rs
crates/typst-serde/: Cargo.toml
es/: [relativeRoute].md  [relativeRoute].paths.ts  [route].md  [route].paths.ts
fr/: index.md
fr/tutorial/: index.md  writing-in-typst.md
main1/: Cargo.toml
main1/src/: main.rs
patches/: es.patch  typst-es.patch  typst-zh.patch  typst.patch  zh.patch
patches/es/: typst.patch
public/: index.html
public/styles/: default.css  docs.css
scripts/: apply.js  apply.rs  build.js  build.rs  diff.js  generate.js  prebuild.js
syntaxes/: Typst.sublime-syntax
templates/: base.html  category-section.html  func-page.html  group-page.html  html-page.html  html-section.html  index.html  packages-page.html  section.html  symbols-page.html  type-page.html
templates/docs/: section.html
templates/macros/: docs-sidebar.html
typst-docs-cli/: Cargo.toml  LICENSE  dl.sh  input.txt
typst-docs-cli/public/scripts/: analytics.js  docs.js
typst-docs-cli/public/styles/: default.css  docs.css
typst-docs-cli/src/: main.rs
typst-docs-cli/templates/: base.html  html.html  packages.html
xtask/: Cargo.toml
xtask/assets/: package.json
xtask/assets/.vitepress/config/: root.ts
xtask/assets/.vitepress/theme/: style.css
xtask/src/: main.rs  templates.rs  typst_docs_de.rs
xtask/templates/: category.md  func.md  html.md  index.md  packages.md  symbols.md
xtask/templates/.vitepress/config/: index.ts  locale.ts
zh/: changelog.md  chinese.md  community.md  glossary.md  index.md  overview.md  roadmap.md
zh/dev/: architecture.md
zh/guides/: guide-for-latex-users.md  page-setup.md  welcome.md
zh/i18n/category/: data-loading-en.yaml  data-loading-zh.yaml  foundations-en.yaml  foundations-zh.yaml  introspection-en.yaml  introspection-zh.yaml  layout-en.yaml  layout-zh.yaml  (+10 more)
zh/reference/: groups.yml  scripting.md  styling.md  syntax.md  welcome.md
zh/tutorial/: 1-writing.md  2-formatting.md  3-advanced.md  4-template.md  advanced-styling.md  formatting.md  index.md  making-a-template.md  welcome.md  writing-in-typst.md
(+176 files in other folders)
