[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["serde-json"] }
ecow = "0.2.0"
fancy-regex = "0.13.0"
include_dir = "0.7.3"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.1"
typst-docs = { git = "https://github.com/typst/typst.git", version = "0.10.0", tag = "v0.10.0" }
xshell = "0.2.5"
