[package]
name = "build-typst-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_with = "3.6.1"
typst = { git = "https://github.com/typst/typst.git", tag = "v0.10.0", version = "0.10.0" }
typst-docs = { git = "https://github.com/typst/typst.git", tag = "v0.10.0", version = "0.10.0" }
typst-render = { git = "https://github.com/typst/typst.git", tag = "v0.10.0", version = "0.10.0" }
